
Eventually this branch will be merged with the development on the
trunk of the CVS tree; this merging will occur in the "rel-1-5" branch.

8/01/2001: cheetah (william fulton)
	   * [Java] Efficiency changes: _cPtr used where possible rather than
	     getCPtr(). Bug fixes for inheritance - derived class sometimes
	     didn't delete the c memory when _delete() was called.
	   * The default output file has always been <module>_wrap.c. It is now
	     <module>_wrap.cxx if the -c++ commandline option is passed to swig.
	     This has been done as otherwise c++ code would appear in a c file.
           *** POTENTIAL INCOMPATIBILITY *** 

7/31/2001: beazley
           Modified the %constant directive to be more C-like in syntax.
           The syntax is now:

                %constant NAME = VALUE;
                %constant TYPE NAME = VALUE;
 
           For example:

                %constant Foo *Bar = &Spam;

           *** POTENTIAL INCOMPATIBILITY ***  Modules that were using
           the %constant directive directly will need to be modified.
      
7/30/2001: beazley
           Removed obscure and undocumented form of the %inline directive:

               %inline int blah(int a, int b) {
                  ...
               }

           *** POTENTIAL INCOMPATIBILITY *** 
           (note: this feature was never documented and is withdrawn)

7/30/2001: beazley
           Removed support for functions with no explicitly declared
           return type.  For example:

                  foo(int);

           In C, such functions were implicitly assumed to return an 'int'.
           In C++, this is illegal.  Either way, it's considered bad
           style.  Removing support for this in SWIG will simplify
           certain issues in parsing.
           *** POTENTIAL INCOMPATIBILITY ***

7/30/2001: mkoeppe
	   * Partial merge from the CVS trunk.  The Source/DOH directory
	     and most of the Source/Swig directory is up-to-date now.